# Flamehaven-Veritas

./: .gitignore  .slopconfig.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SCI-EXP CRITIQUE — EXPERIMENTAL REPORT ANALYSIS v2.1.txt  pyproject.toml  sidrce_p1_cert.yaml  sidrce_p2_cert.yaml  slop_p1.json  slop_p2.json  slop_report.json  slop_report_final.json  slop_report_v220_veritas.json  veritas_v320_sidrce_cert.yaml
.cr-ep/: change_events.jsonl  enforcement_log.jsonl  review_contract.json  scope_declaration.json  session.json  why_gate.json
.github/workflows/: ci.yml  release.yml
docs/: api_reference.md  architecture.md
frontend/: app.js  index.html  style.css
memory/: mica.yaml  playbook.md  sciexp.mica.archive.json
src/veritas/: __init__.py  engine.py  evidence.py  pipeline.py  precheck.py  types.py
src/veritas/api/: __init__.py  app.py  routes.py  schemas.py
src/veritas/cli/: __init__.py  formatters.py  main.py
src/veritas/governance/: __init__.py  cr_ep_gate.py
src/veritas/ingest/: __init__.py  document.py  section_parser.py
src/veritas/journal/: __init__.py  journal_profiles.py  journal_scorer.py
src/veritas/logos/: __init__.py  drift_engine.py  irf_analyzer.py  logos_bridge.py  omega_fusion.py
src/veritas/logos/domain/: __init__.py  base.py  cs.py  (+3 more)
src/veritas/paper/: __init__.py  bibliography_analyzer.py  hypothesis_extractor.py  methodology_detector.py  reproducibility_checklist.py
src/veritas/rag/: __init__.py  context_builder.py  retriever.py
src/veritas/rebuttal/: __init__.py  rebuttal_engine.py  revision_tracker.py
src/veritas/render/: __init__.py  docx_renderer.py  latex_renderer.py  layout.py  md_renderer.py  pdf_renderer.py  response_letter.py
src/veritas/reviewer/: __init__.py  consensus.py  dr3.py  engine.py  persona.py
src/veritas/session/: __init__.py  mica_store.py
src/veritas/spar_bridge/: __init__.py  _compat.py  layer_a.py  layer_b.py  layer_c.py  registry_seed.py  runtime.py  subject_mapper.py
src/veritas/stats/: __init__.py  claim_classifier.py  stat_validator.py
src/veritas/templates/: __init__.py  base.py  bmj.py  ku.py
tests/: conftest.py  test_api.py  test_bibliography_analyzer.py  test_cli.py  test_domain.py  test_domain_integration.py  test_drift_engine.py  test_e2e_api.py  test_integration.py  test_journal.py  test_latex_renderer.py  test_logos.py  test_phase1_v33.py  test_phase2.py  test_pipeline.py  test_precheck.py  test_rebuttal.py  test_reproducibility_checklist.py  test_response_letter.py  test_reviewer.py  test_section_parser.py  test_spar_bridge.py  test_stats.py
