[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flamehaven-veritas"
version = "3.4.2"
description = "VERITAS — AI Critique Experimental Report Analysis Framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["science", "experiment", "critique", "analysis", "governance", "asdp", "veritas", "ai", "flamehaven"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Flamehaven", email = "flamehaven01@gmail.com" },
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "pymupdf>=1.23.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]
logos = [
    "numpy>=1.24.0",
]
rag = [
    "numpy>=1.24.0",
]
spar = [
    "spar-framework>=1.0.0",
]

[project.scripts]
veritas = "veritas.cli.main:main"
veritas-server = "veritas.api.app:main"

[project.urls]
Homepage = "https://github.com/flamehaven01/veritas"
Repository = "https://github.com/flamehaven01/veritas"
Changelog = "https://github.com/flamehaven01/veritas/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=veritas --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "*/render/pdf_renderer.py",
    "*/render/docx_renderer.py",
    "*/templates/ku.py",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
